src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_cast_invalid_void_int.deca
// test invalide de la règle cast



{
    int a = 8;
    (void) (a);
}